{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 17,
  "lineage": "69d94a70-85d4-0096-335c-a950686a97fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:086729879076:instance/i-09fee5db1d1603282",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09fee5db1d1603282",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "model-deploy",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd2e49115d968ba3",
            "private_dns": "ip-172-31-40-59.us-east-2.compute.internal",
            "private_ip": "172.31.40.59",
            "public_dns": "ec2-18-219-121-141.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.121.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026de6203753daa3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "app_security",
              "ssh backend security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-119ce15d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d86b7178b78fc3e",
              "sg-0df04423e963ff1ef"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security",
            "aws_security_group.ssh_backend_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086729879076:security-group/sg-09d86b7178b78fc3e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09d86b7178b78fc3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_security",
            "name_prefix": "",
            "owner_id": "086729879076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-c92195a2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_backend_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086729879076:security-group/sg-0df04423e963ff1ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df04423e963ff1ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh backend security",
            "name_prefix": "",
            "owner_id": "086729879076",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-c92195a2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}